# tinyutf8

./: .gitignore  CMakeLists.txt  Makefile  example.c  tinyutf8.c  tinyutf8.h
examples/: tinyutf8_example.c
